Correct overflowed table and enable flag tests on nose

--- a/mailtemplates/public/css/style.css
+++ b/mailtemplates/public/css/style.css
@@ -10,8 +10,9 @@
 
 .card-table pre {
     position: relative;
-    overflow: scroll;
+    overflow-y: scroll;
     height: 200px;
+    white-space: pre-wrap;
 }
 
 .panel-model .panel-heading{
